# Django-University-project

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
university/settings/: settings.py
