[tool.poetry]
name = "Django-University-project"
version = "0.1.0"
description = ""
authors = ["Hosna83 <rasihosna68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.4"
django = "^5.1.6"
djangorestframework = "^3.15.2"
django-environ = "^0.12.0"
gunicorn = "^23.0.0"
djangorestframework-simplejwt = "^5.4.0"
django-phonenumber-field = "^8.0.0"
django-cors-headers = "^4.7.0"
django-filter = "^24.3"
django-health-check = "^3.18.3"
django-cacheops = "^7.1"
celery = "^5.4.0"
redis = "^5.2.1"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
